# semaphores-and-shared-memory

./: CMakeLists.txt  kons1.c  kons2.c  kons3.c  main.c  produc1.c  produc2.c  produc3.c  producSpec.c  queue.c  queue.h
